--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
             padding: 0;
             font-family: Arial, sans-serif;
             overflow: hidden;
+            background-color: #000;
+            color: #fff;
         }
 
         .jspsych-display-element {
